# pyuhoo

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  example.py  multidict-6.1.0-cp38-cp38-macosx_11_0_arm64.whl  pyproject.toml  settings.py  setup.py  yarl-1.6.3-cp38-cp38-macosx_14_0_arm64.whl
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml  pre-commit-autoupdate.yaml  publish.yaml
pyuhoo/: api.py  auth.py  cli.py  client.py  const.py  consts.py  device.py  endpoints.py  errors.py  uhoo.py  util.py
tests/: conftest.py  test_api_live.py  test_client_live.py
